<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">Tuktalk</string>
    <string name="splash1">취준생과 현직자의\n리얼한 소통창구\n뚝딱과 함께 취업 뚝딱!</string>
    <string name="guide1_1">같은 분야의</string>
    <string name="guide1_2">취준생들과 함께</string>
    <string name="guide1_3">프로젝트 또는 스터디</string>
    <string name="guide1_4">스터디와 프로젝트를 함께 진행할 팀원을</string>
    <string name="guide1_5">모집할 수 있고, 고민상담을 나눌 수 있습니다.</string>
    <string name="guide2_1">현직자 뚝딱 멘토의</string>
    <string name="guide2_2">합격 포트폴리오를</string>
    <string name="guide2_3">찾아보고</string>
    <string name="guide2_4">실제 기업에서 합격한 포트폴리오 원본을</string>
    <string name="guide2_5">참고해서 내 포트폴리오를 발전시킬 수 있습니다.</string>
    <string name="guide3_1">원하는 시간에</string>
    <string name="guide3_2">피드백과 상담까지</string>
    <string name="guide3_3">받아보세요!</string>
    <string name="guide3_4">내가 원하는 시간에 예약해서</string>
    <string name="guide3_5">포트폴리오 피드백과 상담을 받을 수 있습니다.</string>
    <string name="login_id">아이디(이메일)</string>
    <string name="login_pw">비밀번호</string>
    <string name="id_error_1">이메일 형식이 유효하지 않습니다.</string>
    <string name="id_error_2">뚝딱에 가입되어 있지 않은 아이디입니다.</string>
    <string name="pw_error">비밀번호가 맞지 않습니다.</string>
    <string name="hint_login_id">이메일을 입력해주세요.</string>
    <string name="hint_login_pw">비밀번호를 입력해주세요.</string>
    <string name="find_id_pw">아이디 | 비밀번호 찾기</string>
    <string name="tv_signup_question">아직 뚝딱 회원이 아니신가요?</string>
    <string name="tv_signup"><u>회원가입</u></string>
    <string name="tv_selectrole_q">뚝딱에서 어떤 서비스를\n이용하고 싶으세요? 🤔</string>
    <string name="tv_mentee_1">멘티로 가입</string>
    <string name="tv_mentee_2">멘토와 소통하면서 취뽀하고 싶다면!</string>
    <string name="tv_mentor_1">멘토로 가입</string>
    <string name="tv_mentor_2">지식공유를 하면서 수익 창출하고 싶다면!</string>
    <string name="tv_mentee_question">어떤 분야에\n관심있으신가요? 👀</string>
    <string name="tv_mentor_question">어떤 분야에서\n일하고 계신가요? 👀</string>
    <string name="tv_category1">로고/브랜딩</string>
    <string name="tv_category2">UXUI 디자인</string>
    <string name="tv_category3">웹 디자인</string>
    <string name="tv_category4">편집 디자인</string>
    <string name="tv_category5">일러스트/캐릭터 디자인</string>
    <string name="tv_category6">제품/산업디자인</string>
    <string name="tv_category7">웹 개발</string>
    <string name="tv_category8">앱 개발</string>
    <string name="tv_category9">서버 개발</string>
    <string name="tv_category10">IT/기술</string>
    <string name="tv_category11">게임</string>
    <string name="tv_category12">머신러닝/데이터</string>
    <string name="tv_test">   테스트   </string>
    <string name="tv_info_regist_letter">딱 이것만 작성하면\n가입완료! 🙌 </string>
    <string name="tv_info_regist_name">이름(닉네임)</string>
    <string name="tv_info_regist_id">아이디(이메일)</string>
    <string name="tv_info_regist_pw">비밀번호</string>
    <string name="tv_info_regist_pw_check">비밀번호 확인</string>
    <string name="hint_regist_name">이름을 입력해주세요.</string>
    <string name="hint_regist_id">이메일을 입력해주세요.</string>
    <string name="hint_regist_pw">8자 이상으로 입력해주세요.</string>
    <string name="hint_regist_pw_check">8자 이상으로 입력해주세요.</string>
    <string name="regist_name_error">최소 2자 이상으로 적어주세요.</string>
    <string name="regist_id_error1">이메일 형식에 맞게 입력해주세요.</string>
    <string name="regist_id_error2">이미 등록된 계정입니다.</string>
    <string name="regist_pw_error">8자 이상으로 입력해주세요.</string>
    <string name="regist_pw_check_error">비밀번호가 일치하지 않습니다.</string>
    <string name="regist_terms_description">뚝딱 가입 약관에 모두 동의합니다.</string>
    <string name="tv_check_terms"><u>확인하기</u></string>
    <string name="welcome_1">뚝딱 가입을 환영합니다!</string>
    <string name="welcome_2">마이페이지에서 자신을 소개해보세요.</string>
    <string name="dialog_1">회원가입을 중단하시겠습니까?</string>
    <string name="dialog_2">나가기</string>
    <string name="dialog_3">계속 작성</string>
    <string name="item_1">홈</string>
    <string name="item_2">탐색</string>
    <string name="item_3">커뮤니티</string>
    <string name="item_4">상담</string>
    <string name="item_5">마이뚝딱</string>
    <string name="step_1">정보입력</string>
    <string name="step_2">메일인증</string>
    <string name="step_3">등록완료</string>
    <string name="tv_step1_1">현직자 인증하기</string>
    <string name="tv_step1_2">현재 다니고 있는 회사명과 부서를 입력해주세요</string>
    <string name="tv_step2_1">재직중인 기업 이메일을 입력해주세요</string>
    <string name="tv_step2_2">입력하신 기업 이메일은 암호 처리됩니다</string>
    <string name="tv_step3_1">뚝딱 멘토가 되신걸 환영합니다!</string>
    <string name="tv_step3_2">마이페이지에서 자신을 소개해보세요.</string>
    <string name="tv_step_inquire">*외부 이메일 차단 등의 이유로 인증이 불가능한 경우 뚝딱\n tuktalk.business@gmail.com 으로 문의해주세요.</string>
    <string name="tv_step_hint1">회사명</string>
    <string name="tv_step_hint2">ex> 웹 디자인</string>
    <string name="tv_step_hint3">이메일 계정을 입력해주세요</string>
    <string name="search_select_tv_1">관심 분야의 멘토와 포트폴리오를 찾아보세요.</string>
    <string name="search_design_toggle1">UXUI 디자인</string>
    <string name="search_design_toggle2">웹 디자인</string>
    <string name="search_design_toggle3">브랜드 디자인</string>
    <string name="search_design_toggle4">그래픽 디자인</string>
    <string name="search_design_toggle5">산업/제품 디자인</string>
    <string name="search_it_toggle1">앱</string>
    <string name="search_it_toggle2">웹</string>
    <string name="search_it_toggle3">서버</string>
    <string name="search_it_toggle4">AI/머신러닝</string>
    <string name="search_it_toggle5">데이터</string>
    <string name="search_it_toggle6">게임</string>
    <string name="search_it_toggle7">IT/기술직군</string>
    <string name="search_it_toggle8">기타</string>
    <string name="search_dialog_tag_company1">대기업</string>
    <string name="search_dialog_tag_company2">중견기업</string>
    <string name="search_dialog_tag_company3">중소기업</string>
    <string name="search_dialog_tag_company4">스타트업</string>
    <string name="search_dialog_tag_company5">프리랜서</string>
    <string name="search_dialog_tag_career_1">1~2년</string>
    <string name="search_dialog_tag_career_2">3~4년</string>
    <string name="search_dialog_tag_career_3">5~6년</string>
    <string name="search_dialog_tag_career_4">7~8년</string>
    <string name="search_dialog_tag_career_5">9년 이상</string>
    <string name="search_direct_suggest_keyword_1">UXUI 디자인</string>
    <string name="search_direct_suggest_keyword_2">면접</string>
    <string name="search_direct_suggest_keyword_3">대기업 포트폴리오</string>
    <string name="search_direct_suggest_keyword_4">카카오</string>
    <string name="search_direct_suggest_keyword_5">시니어</string>
    <string name="search_direct_suggest_keyword_6">네이버</string>
    <string name="search_direct_suggest_keyword_7">이직</string>
    <string name="tv_mentor_regist_des">✉️ 멘토 인증을 해주셔야 활동하실 수 있습니다!</string>
    <string name="tv_mentor_myservice_des">💬 나의 서비스</string>
    <string name="tv_mentor_myactivity_1">수익관리</string>
    <string name="tv_mentor_myactivity_2">내 계좌</string>
    <string name="tv_mentor_myactivity_3">질문/답변</string>
    <string name="tv_mentor_myactivity_4">멘토/회사 인증하기</string>
    <string name="tv_mentor_other_service_1">공지사항</string>
    <string name="tv_mentor_other_service_2">자주 묻는 질문</string>
    <string name="tv_mentor_other_service_3">뚝딱에 문의하기</string>
    <string name="tv_mentor_other_service_4">뚝딱 서비스 소개</string>
    <string name="tv_mentor_other_service_5">친구초대</string>
    <string name="tv_mentor_other_service_6">계정 설정</string>
    <string name="tv_mentee_recent_portfolio_des">📁 최근 본 포트폴리오</string>
    <string name="tv_home_top5_des">가장 인기있는 TOP5 뚝딱멘토 🎉</string>
    <string name="tv_home_by_task_des">직무별 뚝딱멘토</string>
    <string name="tv_home_mentee_realtime_review">뚝딱멘티들의 실시간 후기 📋</string>
    <string name="tv_home_mentor_des1">뚝딱멘토 활동을 시작해보세요!</string>
    <string name="tv_home_mentor_des2">여러분이 열심히 쌓아온 경험의 가치를 환산해보세요.</string>
    <string name="cv_home_mentor_des1">뚝딱멘토\n바로 시작하기!</string>
    <string name="cv_home_mentor_des2">멘토등록 방법과\n혜택이 궁금해요!</string>
    <string name="tv_viewall_menteereview_des">뚝딱멘티들의 실시간 후기 📋</string>
    <string name="tv_mentor_profile_step1_1">뚝딱 멘티들에게 보여줄\n기본정보를 입력해주세요 👋</string>
    <string name="tv_mentor_profile_step1_des_1">이름(닉네임)<sup>*</sup></string>
    <string name="et_hint_introduce_detail">멘티에게 어필할 수 있는 소개글을 자세히 작성해주세요.</string>
    <string name="tv_mentor_profile_step2_1">전문분야와 상세분야를 선택해주세요 🛠</string>
    <string name="tv_mentor_profile_step3_1">재직중인 회사 정보를 작성해주세요 💼️</string>
    <string name="tv_mentor_profile_step4_1">기타 경력/경험이 있다면 작성해주세요 💻</string>
    <string name="et_hint_mentor_profile_step4_2">최근 커리어에서 주목할 만한 성과나 업무 경험 (큰 프로젝트 참여, 공모전, 대외활동 등등)</string>
    <string name="tv_mentor_profile_step5_1">뚝딱 멘티들이 많이 찾을 수 있도록\n해시태그를 선택해주세요 💬 </string>
    <string name="tv_company_size_1">#대기업</string>
    <string name="tv_company_size_2">#중견기업</string>
    <string name="tv_company_size_3">#중소기업</string>
    <string name="tv_company_size_4">#스타트업</string>
    <string name="tv_company_size_5">#프리랜서</string>
    <string name="tv_hashtag_design_1">#이직</string>
    <string name="tv_hashtag_design_2">#외국계</string>
    <string name="tv_hashtag_design_3">#주니어</string>
    <string name="tv_hashtag_design_4">#시니어</string>
    <string name="tv_hashtag_design_5">#합격포트폴리오</string>
    <string name="tv_hashtag_design_6">#비전공자</string>
    <string name="tv_hashtag_design_7">#실무</string>
    <string name="tv_hashtag_design_8">#피드백</string>
    <string name="tv_hashtag_design_9">#GUI</string>
    <string name="tv_hashtag_design_10">#UX</string>
    <string name="tv_hashtag_design_11">#기업문화</string>
    <string name="tv_hashtag_design_12">#진로고민</string>
    <string name="tv_hashtag_design_13">#노하우</string>
    <string name="tv_hashtag_design_14">#업무체계</string>
    <string name="tv_hashtag_design_15">#상담</string>
    <string name="tv_hashtag_design_16">#프로덕트디자인</string>
    <string name="tv_hashtag_design_17">#캐릭터</string>
    <string name="tv_hashtag_it_1">#이직</string>
    <string name="tv_hashtag_it_2">#외국계</string>
    <string name="tv_hashtag_it_3">#주니어</string>
    <string name="tv_hashtag_it_4">#시니어</string>
    <string name="tv_hashtag_it_5">#합격포트폴리오</string>
    <string name="tv_hashtag_it_6">#비전공자</string>
    <string name="tv_hashtag_it_7">#실무</string>
    <string name="tv_hashtag_it_8">#진로고민</string>
    <string name="tv_hashtag_it_9">#노하우</string>
    <string name="tv_hashtag_it_10">#코딩테스트</string>
    <string name="tv_hashtag_it_11">#채용담당</string>
    <string name="tv_hashtag_it_12">#기업문화</string>
    <string name="tv_hashtag_it_13">#프로젝트</string>
    <string name="tv_hashtag_it_14">#면접</string>
    <string name="tv_hashtag_it_15">#공채</string>
    <string name="tv_hashtag_it_16">#수시채용</string>
    <string name="tv_hashtag_it_17">#CTO</string>
    <string name="tv_hashtag_it_18">#알고리즘</string>
    <string name="tv_hashtag_it_19">#풀스택</string>
    <string name="tv_mentor_info_simple_introduction_test">네이버에서 UXUI 디자이너로 재직중인 애니입니다 :) 한줄소개는 두줄까지 나오고 중간 맞춤됩니다.</string>
    <string name="tv_mentor_info_info_1">뚝딱멘토 소개 👋</string>
    <string name="tv_mentor_info_info_2">재직중인 회사 💼</string>
    <string name="tv_mentor_info_info_3">경력/경험 💻</string>
    <string name="tv_mentor_info_info_4">전문분야 🛠</string>
    <string name="tv_mentor_info_info_5">태그 💬</string>
    <string name="tv_mentor_info_portfolio_1">포트폴리오 소개 📁 </string>
    <string name="tv_mentor_info_portfolio_2">포트폴리오 미리보기 👀</string>
    <string name="tv_mentor_info_portfolio_3">포트폴리오 정보</string>
    <string name="tv_mentor_info_portfolio_4">포트폴리오 합격 인증 ✉️</string>
    <string name="tv_mentor_info_portfolio_5">이런분들께 추천합니다 🙌</string>
    <string name="tv_mentorinfo_info_detailintroduction_sample">안녕하세요! 저는 네이버에 다니고 있는 8년 경력의 UXUI 디자이너입니다. 현재는 네이버 UX기획부터 UI 디자인까지 총괄을 하고있고, 다양한 규모의 스타트업에서 근무하면서 실력을 쌓았습니다. </string>
    <string name="tv_mentorinfo_portfolio_introduction_sample">제 포트폴리오는 카카오, 네이버, 쿠팡에서 UXUI 직무로 합격한 포트폴리오입니다. 총 5개의 프로젝트가 있으며, 개인프로젝트와 팀 프로젝트, 동아리에서 개발자, 기획자와 함께 작업한 프로젝트도 있습니다. </string>
    <string name="tv_service_waiting">준비중입니다. 잠시만 기다려주세요.</string>
    <string name="tv_regist_portfolio_title_1">포트폴리오를 소개해주세요! 📁 </string>
</resources>