<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- guide line start -->
        <!-- horizontal start -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_26.05"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.2605"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_29.6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.296"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_36.2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.362"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_36.8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.368"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_38.8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.388"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_39.4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.394"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_39.5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.395"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_40.4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.404"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_42"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.42"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_93"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.93"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_93.15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.9315"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_95.75"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.9575"
        android:orientation="horizontal"
        />

        <!-- horizontal end -->

        <!-- vertical start -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_4.4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.044"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_4.8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.048"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_5.3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.053"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_19.44"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.1944"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_31.6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.316"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_33.89"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.3389"
        android:orientation="vertical"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_64.72"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.6472"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_66.11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.6611"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_66.94"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.6694"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_68.3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.683"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_80.55"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.8055"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_95.6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.956"
        android:orientation="vertical"
        />


        <!-- vertical end -->

    <!-- guide line end -->

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_26.05"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_29.6"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_31.6"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_68.3"
        android:src="@drawable/logo_login"
        android:scaleType="fitCenter"
        />

    <LinearLayout
        android:id="@+id/linear_Test"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_5.3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_95.6"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_36.8"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_39.4"
       >

        <TextView
            android:id="@+id/tv_id_description"
            style="@style/tv_login_id_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/login_id" />
    </LinearLayout>

    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_4.4"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_95.6"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_40.4"
        app:boxBackgroundColor="#FFFFFF"
        app:hintAnimationEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="이메일을 입력해주세요."
            android:textColorHint="@color/tuktalk_edittext_hint"

            />

    </com.google.android.material.textfield.TextInputLayout>
    -->


   <EditText
       android:id="@+id/et_id"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_4.4"
       app:layout_constraintRight_toRightOf="@id/guideline_vertical_95.6"
       app:layout_constraintTop_toTopOf="@id/guideline_horizontal_40.4"
       android:maxLines="1"
       android:hint="@string/hint_login_id"
       android:textColorHint="@color/tuktalk_edittext_hint"
       android:backgroundTint="#DDDDDD"

       android:inputType="textEmailAddress"
       android:textCursorDrawable="@drawable/edit_text_cursor"

       />


   <View
       android:id="@+id/view1"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintHeight_percent="0.005"
       app:layout_constraintTop_toBottomOf="@id/et_id"
       />

    <!-- id 형식 오류  -->
    <LinearLayout
        android:id="@+id/ll_error_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.02"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_5.3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_95.6"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/tv_id_error"
            style="@style/tv_id_pw_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/id_error_1" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.052"
        app:layout_constraintTop_toBottomOf="@id/ll_error_id"
        />


    <LinearLayout
        android:id="@+id/ll_pw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.026"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_5.3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_95.6"
        app:layout_constraintTop_toBottomOf="@id/view2"
        >
        <TextView
            android:id="@+id/tv_pw_description"
            style="@style/tv_login_id_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/login_pw" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.01"
        app:layout_constraintTop_toBottomOf="@id/ll_pw"/>

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_4.4"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_95.6"
        app:layout_constraintTop_toBottomOf="@id/view3"
        android:maxLines="1"
        android:hint="@string/hint_login_pw"
        android:textColorHint="@color/tuktalk_edittext_hint"
        android:backgroundTint="#DDDDDD"

        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/edit_text_cursor"

        />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.005"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        />

    <!-- pw 형식 오류  -->
    <LinearLayout
        android:id="@+id/ll_error_pw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.02"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_5.3"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_95.6"
        app:layout_constraintTop_toBottomOf="@id/view4"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/tv_pw_error"
            style="@style/tv_id_pw_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/pw_error" />
    </LinearLayout>


    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.052"
        app:layout_constraintTop_toBottomOf="@id/ll_error_pw"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view5"
        app:layout_constraintLeft_toRightOf="@id/guideline_vertical_4.4"
        app:layout_constraintRight_toLeftOf="@id/guideline_vertical_95.6"
        app:layout_constraintDimensionRatio="328:52"

        app:shapeAppearanceOverlay="@style/buttonRadiusShape"
        android:backgroundTint="@color/tuktalk_primary"
        android:text="로그인"
        />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.026"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.0236"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_33.89"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_66.11"
        app:layout_constraintTop_toBottomOf="@id/view6"
        android:maxLines="1"
        android:text="@string/find_id_pw"
        style="@style/tv_find_id_pw"/>


    <!-- 회원가입 문구 2개-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_19.44"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_64.72"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_93.15"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_95.75"
        android:text="@string/tv_signup_question"
        style="@style/tv_signup_question"
        />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_66.94"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_80.55"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_93"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_95.75"
        android:text="@string/tv_signup"
        style="@style/tv_signup"

        />







</androidx.constraintlayout.widget.ConstraintLayout>