<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dialog"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/dialog_rounded">

        <!-- guideline start -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.21"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_79"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.79"/>

        <!-- guideline end -->

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.33"/>

        <TextView
            android:id="@+id/tv_dialog_question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/gl_v_21"
            app:layout_constraintRight_toRightOf="@id/gl_v_79"
            app:layout_constraintTop_toBottomOf="@id/view_1"
            app:layout_constraintHeight_percent="0.117"
            android:text="@string/dialog_1"
            android:maxLines="1"
            style="@style/tv_dialog_1"/>

        <View
            android:id="@id/view_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_question"
            app:layout_constraintHeight_percent="0.187"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/view_2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:weightSum="2">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_v_32.5_1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.25"/>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_v_67.5_1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.75"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.28"
                    app:layout_constraintLeft_toLeftOf="@id/gl_v_32.5_1"
                    app:layout_constraintRight_toRightOf="@id/gl_v_67.5_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:maxLines="1"
                    android:text="@string/dialog_2"
                    style="@style/tv_dialog_2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_continue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_v_32.5_2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.25"/>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_v_67.5_2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.75"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.28"
                    app:layout_constraintLeft_toLeftOf="@id/gl_v_32.5_2"
                    app:layout_constraintRight_toRightOf="@id/gl_v_67.5_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:maxLines="1"
                    android:text="@string/dialog_3"
                    style="@style/tv_dialog_3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>